# octopus

./: .gitignore  .scalafmt.conf  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOP.md  README.md  build.sbt
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-single-node-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md
.planning/phases/02-coordinator-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-01-VERIFICATION.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-workers-arrow-flight/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-advanced-sql-federated-sources/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md
.planning/phases/05-observability-clients/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmark/src/test/scala/io/octopus/sql/parser/: SqlTokenizerTest.scala
common/src/main/scala/io/github/chutian0610/octopus/common/: Engine.scala
common/src/main/scala/io/github/chutian0610/octopus/common/util/: Engine.scala
common/src/main/scala/io/github/chutian0610/octopus/common/util.mem/: SizeOf.scala
common/src/main/scala/io/octopus/common/util/: Engine.scala
crates/octopus-common/: Cargo.toml
crates/octopus-common/src/: lib.rs  time_util.rs
crates/octopus-discovery/: Cargo.toml
crates/octopus-discovery/src/: discovery_server.rs  discovery_state.rs  lib.rs
crates/octopus-discovery/src/discovery_state/: in_memory_store.rs  replicated_state.rs
crates/octopus-rpc/: Cargo.toml  build.rs
crates/octopus-rpc/src/: common.rs  discovery.rs  extends.rs  grpc.health.rs  health.rs  lib.rs
docs/: DEVELOP-CN.md  Parser.md
octopus-cli/: Cargo.toml
octopus-cli/src/: main.rs
octopus-common/: Cargo.toml
octopus-common/src/: error.rs  federated.rs  lib.rs  udf.rs
octopus-coordinator/: Cargo.toml
octopus-coordinator/src/: exchange_operator.rs  lib.rs  main.rs  query_service.rs  scheduler.rs  server.rs  stage_planner.rs  task_tracker.rs  worker_registry.rs
octopus-executor/: Cargo.toml
octopus-executor/src/: datasource.rs  exchange_receiver.rs  exchange_sender.rs  federated_mysql.rs  federated_postgres.rs  lib.rs  logging.rs  query.rs  session.rs
octopus-jdbc/: Cargo.toml
octopus-jdbc/src/: connection.rs  lib.rs  metadata.rs  result_set.rs  statement.rs
octopus-worker/: Cargo.toml
octopus-worker/src/: flight_handler.rs  flight_server.rs  lib.rs  main.rs  metrics.rs  retry_handler.rs  runtime.rs  task_processor.rs  worker_service.rs
octopus/core/: Cargo.toml  build.rs
octopus/server/: Cargo.toml  build.rs
octopus/server/proto/: octopus.proto
parser/src/main/antlr4/presto/: Presto.g4
parser/src/main/scala/info/victorchu/octopus/sql/: SqlNodePosition.scala
parser/src/main/scala/info/victorchu/octopus/sql/parser/: SqlNodePosition.scala  SqlParser.scala  SqlParserOption.scala  SqlParsingException.scala
parser/src/main/scala/info/victorchu/octopus/sql/parser/antlr/: AntlrATNCacheFields.scala  AntlrErrorHandler.scala  CaseInsensitiveStream.scala  ErrorHandler.scala  GrammarNodeLocation.scala  NodeLocation.scala  ParsingException.scala  PrestoAntlr4Printer.scala  PrestoParsingOptions.scala  PrestoSqlParser.scala  PrestoSqlParserOption.scala  RefreshableParserInitializer.scala
parser/src/main/scala/info/victorchu/octopus/sql/parser/antlr/presto/: PrestoAntlr4Printer.scala  PrestoParsingOptions.scala  PrestoSqlParser.scala  PrestoSqlParserOption.scala
parser/src/main/scala/info/victorchu/octopus/sql/parser/parsec/: PrestoSqlParser.scala  SqlLexical.scala  SqlToken.scala  SqlWhitespace.scala
parser/src/main/scala/info/victorchu/octopus/sql/tree/: Limit.scala  Offset.scala  OrderBy.scala  Query.scala  QueryBody.scala  Relation.scala  SqlNode.scala  Statement.scala  WithClause.scala
parser/src/main/scala/io/github/chutian0610/octopus/sql/parser/: Position.scala  SqlParingOption.scala  SqlParser.scala  SqlParsingException.scala  SqlTokenizer.scala
parser/src/main/scala/io/octopus/sql/dialect/: SqlDialect.scala
parser/src/main/scala/io/octopus/sql/parser/: Position.scala  SqlNodePosition.scala  SqlParingOption.scala  SqlParser.scala  SqlParserOption.scala  SqlParsingException.scala  SqlTokenizer.scala
parser/src/main/scala/io/octopus/sql/parser/dialect/: MySQL.scala  Octopus.scala  PrestoDB.scala  SqlDialect.scala
parser/src/main/scala/io/octopus/sql/parser/parsec/: SqlToken.scala  SqlWhitespace.scala
parser/src/main/scala/io/octopus/sql/parser/parsec/presto/: PrestoSqlParser.scala
parser/src/main/scala/io/octopus/sql/parser/token/: CharStream.scala  KEYWORDS.scala  KeyWords.scala  Token.scala  TokenStream.scala  TokenType.scala
parser/src/main/scala/io/octopus/sql/parser/tree/: Expression.scala  Literal.scala  Query.scala  Relation.scala  SqlNode.scala  SqlNodeVisitor.scala  Statement.scala
parser/src/main/scala/io/octopus/sql/tree/: Expression.scala  Literal.scala  Query.scala  Relation.scala  SqlNode.scala  SqlNodeVisitor.scala  Statement.scala
parser/src/main/scala/io/octopus/sql/utils/: Engine.scala
parser/src/test/scala/info/victorchu/octopus/sql/parser/antlr/: PrestoSqlParserTest.scala
parser/src/test/scala/info/victorchu/octopus/sql/parser/parsec/: SqlLexicalTest.scala
parser/src/test/scala/io/github/chutian0610/octopus/sql/parser/: SqlTokenizerTest.scala
parser/src/test/scala/io/octopus/sql/parser/: SqlTokenizerTest.scala
project/: Antlr4Plugin.scala  OctopusDependencies.scala  OctopusResolvers.scala
proto/: build.rs  common.proto  discovery.proto  health.proto  worker.proto
(+19 files in other folders)
