[workspace]
members = ["octopus-common", "octopus-executor", "octopus-cli", "octopus-worker"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Octopus Team"]
license = "Apache-2.0"

[workspace.dependencies]
datafusion = "43"

tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = { version = "4.5", features = ["derive"] }

thiserror = "1"
anyhow = "1"

num_cpus = "1"
