[workspace]
members = ["octopus-common", "octopus-executor", "octopus-cli", "octopus-worker", "octopus-coordinator"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Octopus Team"]
license = "Apache-2.0"

[workspace.dependencies]
datafusion = "43"
datafusion-expr = "43"
datafusion-common = "43"
datafusion-execution = "43"
datafusion-physical-plan = "43"

tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = { version = "4.5", features = ["derive"] }

thiserror = "1"
anyhow = "1"

num_cpus = "1"

tonic = "0.14"
prost = "0.14"
tonic-build = "0.14"
uuid = { version = "1", features = ["v4"] }
reqwest = "0.12"
url = "2"

arrow = "53"
arrow-flight = "53"
arrow-ipc = "53"
futures = "0.3"
async-stream = "0.3"
