[package]
name = "octopus-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "octopus"
path = "src/main.rs"

[dependencies]
octopus-common = { path = "../octopus-common" }
octopus-executor = { path = "../octopus-executor" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
