[package]
name = "octopus-coordinator"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
octopus-common = { path = "../octopus-common" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-common = { workspace = true }