[package]
name = "octopus-coordinator"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
octopus-common = { path = "../octopus-common" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-common = { workspace = true }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }