[package]
name = "octopus-executor"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
octopus-common = { path = "../octopus-common" }
datafusion = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num_cpus = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }
async-stream = "0.3"
futures = { workspace = true }
tonic = "0.12"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
