[package]
name = "octopus-jdbc"
version.workspace = true
edition.workspace = true

[lib]
name = "octopus_jdbc"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
thiserror = { workspace = true }
anyhow = { workspace = true }

[profile.release]
opt-level = 3
lto = true