[package]
name = "octopus-worker"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
octopus-common = { path = "../octopus-common" }
octopus-executor = { path = "../octopus-executor" }

# DataFusion for query execution
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-common = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging and utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
num_cpus = { workspace = true }
clap = { workspace = true }

# Futures for async stream handling
futures = "0.3"

# Arrow Flight - worker data plane (worker-pull model)
arrow-flight = "53"
arrow = "53"
arrow-schema = "53"
arrow-array = "53"

tonic = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
