[package]
name = "octopus-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]

octopus-rpc = { version = "0.1.0", path = "../octopus-rpc" }
tonic = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
[build-dependencies]
