[package]
name = "server"
version = "0.1.0"
edition = "2021"
build = "build.rs"
exclude = ["*.proto"]

[dependencies]
tokio = { workspace = true, features = [
    "full"
] }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
rustc_version = "0.4.0"
tonic-build = { workspace = true }